tests/error/misc_errors/no_return.py
from tests.util import compile_guppy


@compile_guppy
def foo() -> int:
    pass
