tests/error/misc_errors/no_return.err
Error: Expected return statement (at $FILE:6:4)
  | 
4 | @compile_guppy
5 | def foo() -> int:
6 |     pass
  |     ^^^^ Expected return statement

Guppy compilation failed due to 1 previous error
